immutable-processor/src/test/resources/test/type/error/InterfaceWithImpl.java
package test.type.error;

import org.example.immutable.Immutable;

@Immutable
public interface InterfaceWithImpl {}

class ImmutableInterfaceWithImpl {}
